--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled text-white" href="#">Disabled</a>
+        <%# <a class="nav-link disabled text-white" href="#">Disabled</a> %>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -48,7 +48,7 @@
   </div>
 </nav>
 
-　
+
 <%= image_tag"picture.png", size: '144*150'%>
     <%= yield %>
     
