--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -42,11 +42,6 @@
   <% @blog.comments.each do |comment| %>
     <p>
       <%= comment.commenter %>名も無きYP： <%= comment.body %>
-      <% if user_signed_in? %>
-        <% if current_user == @user || current_user.admin? %>
-          
-        <% end %>
-      <% end %>
     </p>
   <% end %>
 
@@ -56,7 +51,7 @@
       <%= f.text_area :body, placeholder: "本文を入力してください", class: "form-control"%>
     </div>
     <div class = "actions">
-      <%= link_to '投稿', blogs_path, class: "btn btn-block btn-secondary btn-sm" %>
+      <%= f.submit "投稿する", class: "btn btn-block btn-secondary btn-sm" %>
     </div>
   <% end %>
   </div>
