--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -35,7 +35,7 @@
       <%= link_to '編集', edit_blog_path(@blog) %> |
     <% end %>
   <% end %>
-  <%= link_to '記事一覧', blogs_path %>
+  <%= link_to 'トップページへ', blogs_path %>
 
 
   <h3>コメント一覧</h3>
